// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<A /> default link should match snapshot 1`] = `
.c0 {
  color: #214154;
  text-decoration: none;
}

.c0:hover {
  color: #3B5B6E;
}

<a
  className="c0"
  href="https://www.gauti.info/nag-me"
>
  Link
</a>
`;

exports[`<A /> inverse link should match snapshot 1`] = `
.c0 {
  color: #f6f6f6;
  text-decoration: none;
}

.c0:hover {
  color: #dddddd;
}

<a
  className="c0"
  href="https://www.gauti.info/nag-me"
>
  Link
</a>
`;
